:construction: Add api for retrieving lca
